@@ -1,3 +1,12 @@
+2017-08-11  Martin Liska  <mliska@suse.cz>
+
+	* decl2.c (get_tls_init_fn): Replace ASM_OUTPUT_DEF with
+	TARGET_SUPPORTS_ALIASES.
+	(handle_tls_init): Likewise.
+	(note_mangling_alias): Likewise.  Remove ATTRIBUTE_UNUSED for
+	both arguments.
+	* optimize.c (can_alias_cdtor): Likewise.
+
 2017-08-11  Jason Merrill  <jason@redhat.com>
 
 	PR c++/81671 - nullptr_t template parameter
